--- a/infra/teamcity/docker-compose.yml
+++ b/infra/teamcity/docker-compose.yml
@@ -8,12 +8,14 @@ services:
       - teamcity-server-logs:/opt/teamcity/logs
     ports:
       - 8111:8111
+    restart: unless-stopped
   teamcity-agent:
     image: jetbrains/teamcity-agent:2017.1.2
     environment:
       SERVER_URL: http://teamcity:8111
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+    restart: unless-stopped
 
 volumes:
   teamcity-server-datadir:
