--- a/integrations/docker-compose.yml
+++ b/integrations/docker-compose.yml
@@ -3,14 +3,14 @@ version: '3.1'
 services:
   generator:
     image: my-registry:55000/gen:ci-8
-    ports: 
-      - "8027:80"
+    #ports: 
+    #  - "8027:80"
     networks:
       - my-network
   mail:
     image: mailhog/mailhog
-    ports: 
-      - "8025:8025"
+    #ports: 
+    #  - "8025:8025"
     networks:
       - my-network
   integration:
